[tool.poetry]
name = "project1-konovalova-elizaveta-m25-555"
version = "0.1.0"
description = ""
authors = ["Elizaveta Konovalova <Eliza050203@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "labyrinth_game" }
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []